@@ -27,8 +27,9 @@ import jakarta.persistence.EntityExistsException;
 @ExtendWith(MockitoExtension.class)
 public class TestFilmService {
 
+    public static final String EXPECTED_EXCEPTION_MESSAGE = "Film not found";
     @InjectMocks
-    FilmService filmServiceMock;
+    FilmService testee;
 
     @Mock
     FilmRepository filmRepositoryMock;
@@ -75,52 +76,68 @@ public class TestFilmService {
 
     @Test
     public void testWhenCreateNewMockList_ThenReturnList() {
+        //Arrange
+        Film expectedFilm1 = new Film();
+        expectedFilm1.setId(mockUUID1);
+        expectedFilm1.setTitle("Prisoner of my Heart");
+        expectedFilm1.setLengthInMinutes(113);
+        expectedFilm1.setReleaseYear("2005");
+
+        Film expectedFilm2 = new Film();
+        expectedFilm2.setId(mockUUID2);
+        expectedFilm2.setTitle("Avenger: Finite War");
+        expectedFilm2.setLengthInMinutes(210);
+        expectedFilm2.setReleaseYear("2022");
+
+        Film expectedFilm3 = new Film();
+        expectedFilm3.setId(mockUUID3);
+        expectedFilm3.setTitle("Apfel: Steve Arbeit");
+        expectedFilm3.setLengthInMinutes(95);
+        expectedFilm3.setReleaseYear("2015");
+
+        //Act
         List<Film> createdListMock = createListOfFilms();
 
-        Film mockFilm1 = new Film();
-        mockFilm1.setId(mockUUID1);
-        mockFilm1.setTitle("Prisoner of my Heart");
-        mockFilm1.setLengthInMinutes(113);
-        mockFilm1.setReleaseYear("2005");
 
-        Film mockFilm2 = new Film();
-        mockFilm2.setId(mockUUID2);
-        mockFilm2.setTitle("Avenger: Finite War");
-        mockFilm2.setLengthInMinutes(210);
-        mockFilm2.setReleaseYear("2022");
-
-        Film mockFilm3 = new Film();
-        mockFilm3.setId(mockUUID3);
-        mockFilm3.setTitle("Apfel: Steve Arbeit");
-        mockFilm3.setLengthInMinutes(95);
-        mockFilm3.setReleaseYear("2015");
-
+        //Assert
         assertEquals(3, createdListMock.size());
-        assertArrayEquals(List.of(mockFilm1, mockFilm2, mockFilm3).toArray(), createdListMock.toArray());
+        assertArrayEquals(List.of(expectedFilm1, expectedFilm2, expectedFilm3).toArray(), createdListMock.toArray());
     }
 
     @Test
     public void testWhenAddAll() {
+        //Arrange
         List<Film> createdListMock = createListOfFilms();
-        filmServiceMock.addFilms(createdListMock);
 
+        //Act
+        testee.addFilms(createdListMock);
+
+        //Assert
         verify(filmRepositoryMock, Mockito.times(1)).saveAll(createdListMock);
         assertEquals(3, mockRepository.size());
     }
 
     @Test
-    public void testWhenGetAllFilms_ThenReturnAll() {
-        List<Film> result = filmServiceMock.getAllFilms();
+    public void testWhenGetAllFilmsIsEmpty_ThenReturnAll() {
+        //Arrange //Act
+        List<Film> filmsFromService = testee.getAllFilms();
 
+        //Assert
         verify(filmRepositoryMock, Mockito.times(1)).findAll();
-        assertEquals(0, result.size());
+        assertEquals(0, filmsFromService.size());
+    }
 
+    @Test
+    public void testWhenGetAllFilmsIsNotEmpty_ThenReturnAll() {
+        //Arrange
         List<Film> createdListMock = createListOfFilms();
-        filmServiceMock.addFilms(createdListMock);
+        testee.addFilms(createdListMock);
 
-        List<Film> resultWithFilms = filmServiceMock.getAllFilms();
+        //Act
+        List<Film> resultWithFilms = testee.getAllFilms();
 
-        verify(filmRepositoryMock, Mockito.times(2)).findAll();
+        //Assert
+        verify(filmRepositoryMock, Mockito.times(1)).findAll();
         assertEquals(3, resultWithFilms.size());
         assertArrayEquals(createdListMock.toArray(), resultWithFilms.toArray());
     }
@@ -128,111 +145,130 @@ public class TestFilmService {
     // Change
     @Test
     public void testWhenGetFilmById_ThenFlow() throws NoSuchFileException {
+        //Arrange
         List<Film> createdListMock = createListOfFilms();
-        filmServiceMock.addFilms(createdListMock);
+        testee.addFilms(createdListMock);
 
-        Film result = filmServiceMock.getFilmById(mockUUID1);
+        //Act
+        Film result = testee.getFilmById(mockUUID1);
 
+        //Assert
         verify(filmRepositoryMock, Mockito.times(1)).findById(mockUUID1);
-        assertEquals(createdListMock.get(0), result);
+        assertEquals(createdListMock.getFirst(), result);
     }
 
     // exception name to result
     @Test
     public void testWhenGetFilmByIdButIDNotExist_ThenThrow() {
+        //Arrange //Act
         Exception exception = assertThrows(NoSuchElementException.class,
-                () -> filmServiceMock.getFilmById(UUID.randomUUID()));
-        String expected = "Film not found";
-        String actual = exception.getMessage();
+                () -> testee.getFilmById(UUID.randomUUID()));
+        String actualExceptionMessage = exception.getMessage();
 
-        assertTrue(actual.contains(expected));
+        //Assert
+        assertTrue(actualExceptionMessage.contains(EXPECTED_EXCEPTION_MESSAGE));
     }
 
     @Test
     public void testWhenAddFilm_ThenFlow() {
-        Film filmMock = new Film();
-        filmMock.setId(mockUUID1);
-        filmMock.setTitle("Test: The Test");
-        filmMock.setLengthInMinutes(123);
-        filmMock.setReleaseYear("1234");
+        //Arrange
+        Film expectedFilm = new Film();
+        expectedFilm.setId(mockUUID1);
+        expectedFilm.setTitle("Test: The Test");
+        expectedFilm.setLengthInMinutes(123);
+        expectedFilm.setReleaseYear("1234");
 
-        Film result = filmServiceMock.addFilm(filmMock);
+        //Act
+        Film actualFilm = testee.addFilm(expectedFilm);
 
-        verify(filmRepositoryMock, Mockito.times(1)).existsById(filmMock.getId());
-        verify(filmRepositoryMock, Mockito.times(1)).save(filmMock);
-        assertEquals(filmMock, result);
+        //Assert
+        verify(filmRepositoryMock, Mockito.times(1)).existsById(expectedFilm.getId());
+        verify(filmRepositoryMock, Mockito.times(1)).save(expectedFilm);
+        assertEquals(expectedFilm, actualFilm);
         assertEquals(1, mockRepository.size());
     }
 
     @Test
     public void testWhenAddFilmAlreadyExist_ThenThrowError() {
-        Film filmMock = new Film();
-        filmMock.setId(mockUUID1);
-        filmMock.setTitle("Test: The Test");
-        filmMock.setLengthInMinutes(123);
-        filmMock.setReleaseYear("1234");
+        //Arrange
+        Film expectedFilm = new Film();
+        expectedFilm.setId(mockUUID1);
+        expectedFilm.setTitle("Test: The Test");
+        expectedFilm.setLengthInMinutes(123);
+        expectedFilm.setReleaseYear("1234");
 
-        filmServiceMock.addFilm(filmMock);
 
-        Exception exception = assertThrows(EntityExistsException.class, () -> filmServiceMock.addFilm(filmMock));
+        //Act
+        testee.addFilm(expectedFilm);
+
+
+        //Assert
+        Exception exception = assertThrows(EntityExistsException.class, () -> testee.addFilm(expectedFilm));
         String expected = "Film already exist";
         String actual = exception.getMessage();
 
         assertEquals(expected, actual);
 
-        verify(filmRepositoryMock, Mockito.times(2)).existsById(filmMock.getId());
-        verify(filmRepositoryMock, Mockito.times(1)).save(filmMock);
+        verify(filmRepositoryMock, Mockito.times(2)).existsById(expectedFilm.getId());
+        verify(filmRepositoryMock, Mockito.times(1)).save(expectedFilm);
     }
 
     @Test
     public void testWhenUpdateFilm_ThenFlow() {
+        //Arrange
         List<Film> createdListMock = createListOfFilms();
-        filmServiceMock.addFilms(createdListMock);
+        testee.addFilms(createdListMock);
 
         Film mockEditedFilm = new Film(createdListMock.get(1));
         mockEditedFilm.setReleaseYear("1999");
         mockEditedFilm.setTitle("Avenger: NaN War");
 
-        filmServiceMock.updateFilm(mockEditedFilm);
+        //Act
+        testee.updateFilm(mockEditedFilm);
 
+        //Assert
         verify(filmRepositoryMock, Mockito.times(1)).existsById(mockEditedFilm.getId());
         verify(filmRepositoryMock, Mockito.times(1)).save(mockEditedFilm);
 
         assertNotEquals(createdListMock.get(1), mockEditedFilm);
 
-        List<Film> allFilmResult = filmServiceMock.getAllFilms();
+        List<Film> allFilmResult = testee.getAllFilms();
 
         assertEquals(mockEditedFilm, allFilmResult.get(1));
     }
 
     @Test
     public void testWhenUpdateFilmButIDNotExist_ThenThrowError() {
-        Film filmMock = new Film();
-        filmMock.setId(mockUUID1);
-        filmMock.setTitle("Test: The Test");
-        filmMock.setLengthInMinutes(123);
-        filmMock.setReleaseYear("1234");
+        //Arrange
+        Film editFilm = new Film();
+        editFilm.setId(mockUUID1);
+        editFilm.setTitle("Test: The Test");
+        editFilm.setLengthInMinutes(123);
+        editFilm.setReleaseYear("1234");
 
+        //Act //Assert
         Exception exception = assertThrows(NoSuchElementException.class,
-                () -> filmServiceMock.updateFilm(filmMock));
-        String expected = "Film not found";
+                () -> testee.updateFilm(editFilm));
         String actual = exception.getMessage();
 
-        assertEquals(expected, actual);
+        assertEquals(EXPECTED_EXCEPTION_MESSAGE, actual);
 
-        verify(filmRepositoryMock, Mockito.times(1)).existsById(filmMock.getId());
-        verify(filmRepositoryMock, Mockito.times(0)).save(filmMock);
+        verify(filmRepositoryMock, Mockito.times(1)).existsById(editFilm.getId());
+        verify(filmRepositoryMock, Mockito.times(0)).save(editFilm);
     }
 
     @Test
     public void testWhenDeleteFilm_ThenFlow() {
+        //Arrange
         List<Film> createdListMock = createListOfFilms();
-        filmServiceMock.addFilms(createdListMock);
+        testee.addFilms(createdListMock);
 
         Film toBeDeletedMock = createdListMock.get(2);
 
-        filmServiceMock.deleteFilm(toBeDeletedMock.getId());
+        //Act
+        testee.deleteFilm(toBeDeletedMock.getId());
 
+        //Assert
         verify(filmRepositoryMock, Mockito.times(1)).existsById(toBeDeletedMock.getId());
         verify(filmRepositoryMock, Mockito.times(1)).deleteById(toBeDeletedMock.getId());
 
@@ -242,8 +278,9 @@ public class TestFilmService {
 
     @Test
     public void testWhenDeleteFilmButFilmNotExist_ThenThrow() {
+        //Arrange //Act //Assert
         Exception exception = assertThrows(NoSuchElementException.class,
-                () -> filmServiceMock.deleteFilm(mockUUID1));
+                () -> testee.deleteFilm(mockUUID1));
         String expected = "Film not found";
         String actual = exception.getMessage();
 
